--- a/views/show_entries.tt
+++ b/views/show_entries.tt
@@ -18,7 +18,7 @@
             
             <div id="content-in">
 
-<% IF session.logged_in %>
+<% IF session.user %>
   <form action="<% add_entry_url %>" method=post class=add-entry>
     <dl>
       <dt>Title:
@@ -32,17 +32,17 @@
 <ul class=entries>
 <% IF entries.size %>
   <% FOREACH id IN entries.keys.nsort %>
-    <li><h2><% entries.$id.title %></h2><% entries.$id.text %>
+    <li><h2><% entries.$id.title %></h2><% entries.$id.text %><% entries.$id.author %>
   <% END %>
 <% ELSE %>
   <li><em>Unbelievable.  No entries here so far</em>
 <% END %>
 </ul>
 
-<% IF not session.logged_in %>
+<% IF not session.user %>
       <a href="<% login_url %>">log in</a>
     <% ELSE %>
-      <a href="<% logout_url %>">log out</a>
+      <a href="<% logout_url %>">log out (<%session.user%>)</a>
     <% END %>
     <% IF msg %>
     <% msg %>
