--- a/views/layouts/new_main.tt
+++ b/views/layouts/new_main.tt
@@ -15,8 +15,8 @@
     
    <link rel="stylesheet" media="screen,projection" type="text/css" href="<% request.uri_base %>/css/main.css" />
     <!--[if lte IE 6]><link rel="stylesheet" type="text/css" href="css/main-msie.css" /><![endif]-->
-    <link rel="stylesheet" media="screen,projection" type="text/css" href="css/scheme.css" />
-    <link rel="stylesheet" media="print" type="text/css" href="css/print.css" />
+    <link rel="stylesheet" media="screen,projection" type="text/css" href="<% request.uri_base %>/css/scheme.css" />
+    <link rel="stylesheet" media="print" type="text/css" href="<% request.uri_base %>/css/print.css" />
 
     <title>www stephangrein de | Academic self-portrayal</title>
 </head>
