User password recovery started. See also TODO in lib/Myapp.pm

--- a/views/recover_password.tt
+++ b/views/recover_password.tt
@@ -16,28 +16,7 @@
             <hr class="noscreen" />
             
             <div id="content-in">
-<h2>Login</h2>
+<h2>Recover Password </h2>
 <% IF err %><p class=error><strong>Error:</strong> <% err %><% END %>
-<form action="<% login_url %>" method=post>
-  <dl>
-    <dt>Username:
-    <dd><input type=text name=username>
-    <dt>Password:
-    <dd><input type=password name=password>
-    <dt>Capture (see below):
-    <dd><input type=text name=captcha_str2>
-    <dd><input type=submit value=Login>
-  </dl>
-</form>
-
-Capture:
-<img src="data:image/<%captcha_mime%>;base64,<% captcha_data %>"/>
-               
-
-<h2>Password Recovery</h2>
-In case of a forgotten password please click <a href="<%password_recovery_url%>">here</a>.
-
-
-
-
-            </div> <!-- /content-in -->
+TO be implemented...
+</div>
