Added passwod recovery.

--- a/views/recover_password.tt
+++ b/views/recover_password.tt
@@ -18,5 +18,19 @@
             <div id="content-in">
 <h2>Recover Password </h2>
 <% IF err %><p class=error><strong>Error:</strong> <% err %><% END %>
-TO be implemented...
+<form action="<% password_recovery_url %>" method=post>
+  <dl>
+    <dt>Username:
+    <dd><input type=text name=username>
+    <dt>Email:
+    <dd><input type=text name=mail>
+    <dt>Capture (see below):
+    <dd><input type=text name=captcha_str2>
+    <dd><input type=submit value=Login>
+  </dl>
+</form>
+
+Capture:
+<img src="data:image/<%captcha_mime%>;base64,<% captcha_data %>"/>
+
 </div>
