--- a/views/recover_password.tt
+++ b/views/recover_password.tt
@@ -26,7 +26,7 @@
     <dd><input type=text name=mail>
     <dt>Capture (see below):
     <dd><input type=text name=captcha_str2>
-    <dd><input type=submit value=Login>
+    <dd><input type=submit value=Recover>
   </dl>
 </form>
 
