Fixed unemoticonize subroutine (inserting <img> tags for smileys in DB -> readout that tags and convert it to unescaped smileys. Added POST method for userpages, thus allowing users to edit their pages. Added note in TODOS about smileys usage with javascript throughout the page. Restructured TODOs.

--- a/views/userpages.tt
+++ b/views/userpages.tt
@@ -25,7 +25,7 @@
     <dt>Email:
     <dd><input type=text name=mail value=<%email%>>
     <dt>About:
-    <textarea name="About" cols="50" rows="20"> <%about_text%> </textarea>
+    <textarea name=about_text cols="50" rows="20"> <%about_text%> </textarea>
     <dd><input type=submit value=Edit>
   </dl>
 </form>
