Implemented toggle read. Fixed the problem that every user can read each inbox if logged in...

--- a/views/message.tt
+++ b/views/message.tt
@@ -35,11 +35,18 @@
   </dl>
 </form>
 
-<% FOREACH id IN all_messages.keys %>
+<% IF session.user == send_to_user %>
+<% FOREACH id IN all_messages.keys.nsort.reverse %>
   <li>
     <h3> <% all_messages.$id.subject %> from <%all_messages.$id.from_user%> </h3>
-    <%all_messages.$id.message%> (Action: <a href="<%delete_message%>/<%all_messages.$id.id%>">delete</a> / <a href="<%reply_message%>/<%all_messages.$id.id%>">reply</a> / <a href="<%toggle_read_message_url%>/<%all_messages.$id.id%>">toggle (un)-read</a>)
+    <% IF all_messages.$id.read == 0 %>
+  <span style="color:red">
+    <%ELSE %>
+   <span style="color:green">
+  <%END%>
+    <%all_messages.$id.message%> </span> (Action: <a href="<%delete_message%>/<%all_messages.$id.id%>">delete</a> / <a href="<%reply_message%>/<%all_messages.$id.id%>">reply</a> / <a href="<%toggle_read_message_url%>/<%all_messages.$id.id%>">toggle (un)-read</a>)
     <br />
   </li>
+<%END%>
 <%END%>
 </div> <!-- /content-in -->
