Added deleted helper table. Users can now delete their messages each. Table deleted compromises the status which is set to 0, 1 or 2 depending on the deletion state. Please note, that the primary keys are identicial for messages and deleted... TODO: cleanup periodically the both tables, when the status column is 2 => i. e. both partners deleted the message. => see also TODO about toggles.

--- a/views/message.tt
+++ b/views/message.tt
@@ -60,11 +60,11 @@ You have <%unread_messages%> unread messages. <br />
   <% ELSE %>
     <span style="color:black">
   <%END%>
-    <%all_messages.$id.message%> </span> <%IF mbox_folder == "Inbox" %> (Action: <a href="<%delete_message%>/<%all_messages.$id.id%>">delete</a> / <a href="<%reply_message%>/<%all_messages.$id.id%>">reply</a> / <a href="<%toggle_read_message_url%>/<%all_messages.$id.id%>">toggle (un)-read</a>) <%END %>
+    <%all_messages.$id.message%> </span> <%IF mbox_folder == "Inbox" %> (Action: <a href="<%delete_message%>/<%all_messages.$id.id%>">delete</a> / <a href="<%reply_message%>/<%all_messages.$id.id%>">reply</a> / <a href="<%toggle_read_message_url%>/<%all_messages.$id.id%>">toggle (un)-read</a>)<%END%>
     <br />
   </li>
 <%END%>
 <%END%>
 <br />
-Folders: <a href="<%messages_url %>/<%send_to_user%>/Inbox">Inbox</a> / <a href="<%messages_url %>/<%send_to_user%>/Sent"> Sent </a>
+Folders: <a href="<%messages_url %>/<%send_to_user%>/Inbox">Inbox</a> / <a href="<%messages_url %>/<%send_to_user%>/Sent">Sent</a> /  <a href="<%messages_url%>/<%send_to_user%>/Delete">Delete</a>
 </div> <!-- /content-in -->
